# echo-kube-example

./: Cargo.toml  LICENSE  echo-example.yaml  echo-test.yaml  echoes.example.com.yaml  echoes.test.com.yaml  readme.org
.github/workflows/: check.yaml
src/: controller.rs  crd.rs  deployment.rs  error.rs  finalizer.rs  main.rs  service.rs  spec.rs
