[package]
name = "http-echo-operator-kube-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
# Latest k8s-openapi feature version available at this time.
# From https://kubernetes.io/docs/tasks/tools/install-kubectl-linux/, will be
# able to connect with v1.25, v1.26, and v1.27 control planes.
k8s-openapi = { version = "0.18", default-features = false, features = ["v1_26"] }
kube = { version = "0.83", features = ["derive", "runtime"] }
schemars = "0.8.12"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
